Correction de l'url de connection à la db

--- a/src/main/resources/application-dev-db.properties
+++ b/src/main/resources/application-dev-db.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/sigef?currentSchema=sigef,audit,public
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:6543/postgres?prepareThreshold=0&currentSchema=sigef,audit,public
+spring.datasource.username=postgres.elnkoutlbwusjvrqigwy
+spring.datasource.password=p01Ukm20fUICPGhH
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool (Spring Boot uses HikariCP by default)
@@ -10,7 +10,7 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.default_schema=sigef
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
